[package]
name = "httpg"
version = "0.1.0"
edition = "2024"
publish = false

[profile.dev]
debug = 0
strip = "debuginfo"

[dependencies]
axum = { version = "^0.8", features = ["http2", "multipart"] }
axum-macros = "^0.5"
axum-extra = { version = "^0.10", features = ["typed-header", "cookie", "form", "query"] }
tower = "^0.5"
tower-http = { version = "^0.6", features = ["cors", "fs", "compression-gzip"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
tokio = { version = "^1.0", features = ["full"] }
tokio-postgres = { version = "^0.7", features= ["with-serde_json-1", "array-impls"] }
tracing = "^0.1"
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
postgres-types = { version = "^0.2", features = ["derive"] }
deadpool-postgres = { version = "^0.14", features = ["serde"] }
biscuit-auth = "^5.0"
hex = "^0.4"
config = "^0.14"
tokio-postgres-rustls = "^0.13"
rustls = "^0.23"
axum-server = { version = "^0.7", features = ["tls-rustls"] }
futures = "0.3"
tokio-stream = "^0.1"
serde_qs = "^0.13"
bytes = "^1.8"
sqlparser = { version = "^0.53", features = ["visitor"] }
cookie = "^0.18"
email-clients = { version = "^0.2", features = ["smtp"] }
flate2 = "^1.1"
conf = "^0.2"
thiserror = "^2.0"
