[package]
name = "httpg"
version = "0.1.0"
edition = "2024"
publish = false

[profile.dev]
debug = false
strip = "debuginfo"

[profile.dev.build-override]
debug = false

[dependencies]
axum = { version = "^0", features = ["http2", "multipart"] }
axum-macros = "^0"
axum-extra = { version = "^0", features = ["typed-header", "cookie", "form", "query"] }
tower = "^0"
tower-http = { version = "^0", features = ["cors", "fs", "compression-gzip", "trace"] }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
tokio = { version = "^1", features = ["full"] }
tokio-postgres = { version = "^0", features= ["with-serde_json-1", "array-impls"] }
tracing = "^0"
tracing-subscriber = { version = "^0", features = ["env-filter", "json", "fmt", "std"] }
postgres-types = { version = "^0", features = ["derive"] }
deadpool-postgres = { version = "^0", features = ["serde"] }
biscuit-auth = "^5"
hex = "^0"
config = "^0"
tokio-postgres-rustls = "^0"
rustls = "^0"
axum-server = { version = "^0", features = ["tls-rustls"] }
futures = "^0"
tokio-stream = "^0"
serde_qs = "1.0.0-rc.4"
bytes = "^1"
sqlparser = { version = "^0", features = ["visitor"] }
cookie = "^0"
flate2 = "^1"
conf = "^0"
thiserror = "^2"
lettre = { version = "^0", features = ["smtp-transport", "tokio1", "tokio1-native-tls"] }
reqwest = "^0"
web-push = { version = "^0", features = ["hyper-client"] }
http = "^1"
